<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <artifactId>svann</artifactId>
    <packaging>pom</packaging>
    <modules>
        <module>svanna-core</module>
        <module>svanna-test</module>
        <module>svanna-io</module>
        <module>svanna-ingest</module>
        <module>svanna-cli</module>
        <module>svanna-legacy</module>
    </modules>
    <groupId>org.jax.svanna</groupId>
    <version>0.2.9</version>
    <name>SvAnna</name>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.2.1.RELEASE</version>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>
        <junit.version>5.7.0</junit.version>
        <slf4j.version>1.7.30</slf4j.version>
        <phenol.version>1.6.1</phenol.version>
        <jannovar.version>0.35</jannovar.version>
        <htsjdk.version>2.23.0</htsjdk.version>
        <variant.api.version>1.0-SNAPSHOT</variant.api.version>
    </properties>

    <developers>
        <developer>
            <name>Daniel Danis</name>
            <email>daniel.danis@jax.org</email>
            <organization>The Jackson Laboratory for Genomic Medicine</organization>
            <organizationUrl>https://www.jax.org</organizationUrl>
        </developer>
        <developer>
            <name>Peter N Robinson</name>
            <email>peter.robinson@jax.org</email>
            <organization>The Jackson Laboratory for Genomic Medicine</organization>
            <organizationUrl>https://www.jax.org</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:TheJacksonLaboratory/svann.git</connection>
        <developerConnection>scm:git:git@github.com:TheJacksonLaboratory/svann.git</developerConnection>
        <url>scm:git:git@github.com:TheJacksonLaboratory/svann.git</url>
        <tag>v${project.version}</tag>
    </scm>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <!--                       TESTING                                          -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!-- remove the code below -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>
        </plugins>

    </build>
</project>
